registration functionality completed

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 # next.js
 /.next/
 /out/
+/public/kyc-documents
 
 # production
 /build
@@ -41,3 +42,4 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
